tests/ui/parser/bounds-type-where.stderr
error: expected one of `!`, `(`, `+`, `::`, `:`, `<`, `==`, `=`, or `is`, found `,`
  --> $DIR/bounds-type-where.rs:8:15
   |
LL | type A where T, = u8;
   |               ^ expected one of 9 possible tokens

error: aborting due to previous error

